# framebot

./: Cargo.toml  LICENSE.md  README.md
src/: main.rs  move_store.rs
src/commands/: character_move.rs  mod.rs  ping.rs
src/converters/: alias_generators.rs  mod.rs  okizeme.rs
src/matchers/: jaro_matcher.rs  mod.rs
src/repositories/: mod.rs  wavu_move_repository.rs
src/services/: frame_service.rs  mod.rs
src/tekken/: character.rs  character_move.rs  mod.rs
