[package]
name = "framebot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
dotenvy = "0.15.7"
futures = "0.3.31"
html-escape = "0.2.13"
poise = "0.6.1"
reqwest = { version = "0.12.24", features = ["json"] }
scraper = "0.24.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
strsim = "0.11.1"
strum = { version = "0.27.2", features = ["strum_macros"] }
strum_macros = "0.27.2"
tokio = { version = "1.48.0", features = ["full"] }
tracing = { version = "0.1.41", features = ["attributes"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
